--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     - name: 📂 5.Deploy-gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+#        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
 
         keep_files: true
